--- a/style.css
+++ b/style.css
@@ -7,15 +7,47 @@ body {
   height: 95%;
   width: 100%;
   font-family: sans-serif;
-  background-image: url('http://addyosmani.com/blog/wp-content/uploads/2013/04/unicorn.jpg');
+  background-image: url('https://devmounta.in/img/classroom-blurred.png');
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+.messages-container {
+    word-wrap: break-word;
+}
+
+.devImg {
+  padding-left: 10%;
+  padding-right: 10%;
+  margin-top: 10px;
+  margin-bottom: -30px;
+  min-width: 300px;
+}
+
+h1 {
+    font-size: 4vw;
+    font-family: "RobotoDraft", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+
 }
 
 .main-container {
   width: 75%;
   margin: 10px auto;
-  background: rgba(255, 255, 255, 0.86);
+  background: rgba(255, 255, 255, 0.70);
   padding: 5px;
   border-radius: 10px;
+  box-shadow: inset 0 0 20px steelblue;
+}
+
+.text-container {
+    width: 75%;
+    margin: 10px auto;
+    background: rgba(255, 255, 255, 0.70);
+    padding: 5px;
+    border-radius: 10px;
+    box-shadow: 0 0 20px steelblue;
 }
 
 .main-container h1 {
